# doc-gen

./: README.md  pyproject.toml
.github/workflows/: pages.yml
doc_gen/: cli.py  cognee_backend.py  generator.py  git.py  manifest.py  server.py  store.py  wiki.py
doc_gen/templates/: index.html
site/: index.html  script.js  styles.css
