[project]
name = "doc-gen"
version = "0.1.0"
description = "Incremental LLM-powered documentation from git history"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
cognee = ["cognee>=0.1.0"]

[project.scripts]
doc-gen = "doc_gen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
